# sol-staff

./: Anchor.toml  Cargo.toml
data/: cli-transfer-config.yaml  config.yaml  geyser-config.yaml
data/keys/: 6ZEYCBmDwyuWdjY7FuiZekSSfe4cCjx6aXJnEE96x9V2  AXGtBodcAKe5bt5MP5kcBHvfwpZ4oiPbS4e1R6s8EMXL  CZ4iQ29W3wULoDWiUQ9YWDwbkZv5ETQKE8f53oGLzNkr  EDfqqyEKYHhfNdGc81Mrk6jsCJ8j3g8EnF8qikavurxE  EL3Wpg3SVp5xqEW3SryBwmTsKBNR8Sg3VEfdvejmLMR9  EpeCwymDnbpC3P4vzpqgEJjRemtoVJ3DH7QPm3HABwwR  FSbZXLxyokc7d3TxGBrjMnCut5w36vHzXpEKeZ3EXtUA  H3TbGHN3TbX6cD2UsYapQDTXq57baUZuwthnu6gruA8F  H78pG8cVYZJa5BHqps6Qn9CiWKvzvPuYi1vrVGh37cxG
programs/sol_deposit/: Cargo.toml
programs/sol_deposit/src/: instructions.rs  lib.rs
tasks/cli-transfer/: Cargo.toml
tasks/cli-transfer/cli-transfer/: Cargo.toml
tasks/cli-transfer/src/: main.rs
tasks/get-balance/: Cargo.toml
tasks/get-balance/get-balance/: Cargo.toml
tasks/get-balance/src/: main.rs
tasks/geyser/: Cargo.toml
tasks/geyser/src/: main.rs
tasks/sol-deposit-cli/: Cargo.toml
tasks/sol-deposit-cli/src/: main.rs
tasks/utils/: Cargo.toml
tasks/utils/src/: lib.rs
tests/: sol_deposit.ts
