[workspace]
members = [
    "tasks/utils",
    "tasks/get-balance",
    "tasks/cli-transfer",
    "tasks/geyser",
    "programs/sol_deposit",
    "tasks/sol-deposit-cli"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
