[package]
name = "cli-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
solana-client = { version = "2.2.7"}
solana-sdk = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
