[package]
name = "geyser"
version = "0.1.0"
edition = "2021"

[dependencies]
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
solana-sdk = "2.2.1"
solana-client = "2.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tonic = "0.12.1"